--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,3 +16,14 @@
     background-color: red;  
 }  
 
+.swiper-button-prev,
+.swiper-button-next{
+    transition: .3s linear;
+    color: rgba(255, 0, 0, .2);
+    /* top: 370px ; */
+}
+
+.swiper-button-prev:hover,
+.swiper-button-next:hover{
+    color: rgba(255, 0, 0, 0.5);
+}
